--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="overlay">
 			<nav class="nav">
-				<a href="#" class="logo">
+				<a href="/" class="logo">
 					<div class="icon"></div>
 					<div class="logo-text">sandy pearlman &amp; bones</div>
 				</a>
