--- a/index.html
+++ b/index.html
@@ -38,16 +38,23 @@
 				<a href="" class="link">download</a>
 			</nav>
 			<nav class="controls">
-				<div class="list"></div>
+				<div class="list" id="list"></div>
 				<div class="previous"></div>
 				<div class="play"></div>
 				<div class="next"></div>
+				<div class="tracklist">
+					<p>Stag&apos;d Out</p>
+					<p>Boneyard</p>
+					<p>City Life</p>
+					<p>Game of Thrones</p>
+					<p>Tim Tebow</p>
+				</div>
 			</nav>
 		</div>
 
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
 
-		<script src="js/scripts.min.js"></script>
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
