--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 					<p>Tim Tebow</p>
 				</div>
 			</nav>
+			<!--<audio controls="controls" autoplay="true">
+			  <source src="music/stagdout.ogg" type="audio/ogg">
+			  <source src="music/stagdout.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+			</audio>-->
 		</div>
 
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
