player almost functioning besides next/prev button

--- a/index.html
+++ b/index.html
@@ -43,18 +43,13 @@
 				<div class="play"></div>
 				<div class="next"></div>
 				<div class="tracklist">
-					<p>Stag&apos;d Out</p>
-					<p>Boneyard</p>
-					<p>City Life</p>
-					<p>Game of Thrones</p>
-					<p>Tim Tebow</p>
+					<p data-url="stagdout">Stag&apos;d Out</p>
+					<p data-url="boneyard">Boneyard</p>
+					<p data-url="citylife">City Life</p>
+					<p data-url="gameofthrones">Game of Thrones</p>
+					<p data-url="timtebow">Tim Tebow</p>
 				</div>
 			</nav>
-			<!--<audio controls="controls" autoplay="true">
-			  <source src="music/stagdout.ogg" type="audio/ogg">
-			  <source src="music/stagdout.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-			</audio>-->
 		</div>
 
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
