--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
 			<section id="home" class="section"></section>
 			<section id="about" class="section"></section>
 			<section id="events" class="section"></section>
-			<section id="gallery" class="section"></section>
+			<section id="gallery" class="section">
+				<!-- Gallery section -->
+
+				<ul class="photo-list">
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+					<li class="g-image"></li>
+				</ul>	
+			</section>
 		</div>
 		<div class="overlay">
 			<nav class="nav">
@@ -76,8 +93,6 @@
 		</div>
 
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
-
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
