--- a/index.html
+++ b/index.html
@@ -20,78 +20,80 @@
 
 	</head>
 	<body>
+		<nav class="nav">
+			<a href="/" class="logo">
+				<div class="icon"></div>
+			</a>
+			<a href="#about" class="link" data-link="about">about</a>
+			<a href="#events" class="link" data-link="events">events</a>
+			<a href="#gallery" class="link" data-link="gallery">gallery</a>
+			<a href="" class="link">download</a>
+		</nav>
+		<nav class="controls">
+			<div class="now-playing">
+				
+			</div>
+			<div class="player previous"></div>
+			<div class="player play"></div>
+			<div class="player next"></div>
+			<div class="player list" id="list"></div>
+			<ul class="tracklist">
+				<li>
+					<div class="album"></div>
+					<p class="track" data-url="stagdout">Stag&apos;d Out</p>
+					<div class="status"></div>
+				</li>
+				<li>
+					<div class="album"></div>
+					<p class="track" data-url="boneyard">Boneyard</p>
+					<div class="status"></div>
+				</li>
+				<li>
+					<div class="album"></div>
+					<p class="track" data-url="citylife">City Life</p>
+					<div class="status"></div>
+				</li>
+				<li>
+					<div class="album"></div>
+					<p class="track" data-url="gameofthrones">Game of Thrones</p>
+					<div class="status"></div>
+				</li>
+				<li>
+					<div class="album"></div>
+					<p class="track" data-url="timtebow">Tim Tebow</p>
+					<div class="status"></div>
+				</li>
+			</ul>
+		</nav>
 		<div class="stage">
+
+
 			<section id="home" class="section"></section>
 			<section id="about" class="section"></section>
 			<section id="events" class="section"></section>
 			<section id="gallery" class="section">
 				<!-- Gallery section -->
 
-				<ul class="photo-list">
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
-					<li class="g-image"></li>
+				<ul class="columns">
+					<li class="left">
+						<img src="img/press.jpg" alt="">
+						<img src="img/harrymgk.jpg" alt="">
+					</li>
+
+					<li class="center">
+						<img src="img/blowingherb.jpg" alt="">
+						<img src="img/plaid.jpg" alt="">
+						<img src="img/fisheye2.jpg" alt="">
+					</li>
+
+					<li class="right">
+						<img src="img/stagoutjake.jpg" alt="">
+						<img src="img/harrymgk2.jpg" alt="">
+						<img src="img/fisheye.jpg" alt="">
+					</li>
 				</ul>	
 			</section>
 		</div>
-		<div class="overlay">
-			<nav class="nav">
-				<a href="/" class="logo">
-					<div class="icon"></div>
-				</a>
-				<a href="#about" id="hobos" class="link" data-link="about">about</a>
-				<a href="#events" class="link" data-link="events">events</a>
-				<a href="#gallery" class="link" data-link="gallery">gallery</a>
-				<a href="" class="link">download</a>
-			</nav>
-			<nav class="controls">
-				<div class="now-playing">
-					
-				</div>
-				<div class="player previous"></div>
-				<div class="player play"></div>
-				<div class="player next"></div>
-				<div class="player list" id="list"></div>
-				<ul class="tracklist">
-					<li>
-						<div class="album"></div>
-						<p class="track" data-url="stagdout">Stag&apos;d Out</p>
-						<div class="status"></div>
-					</li>
-					<li>
-						<div class="album"></div>
-						<p class="track" data-url="boneyard">Boneyard</p>
-						<div class="status"></div>
-					</li>
-					<li>
-						<div class="album"></div>
-						<p class="track" data-url="citylife">City Life</p>
-						<div class="status"></div>
-					</li>
-					<li>
-						<div class="album"></div>
-						<p class="track" data-url="gameofthrones">Game of Thrones</p>
-						<div class="status"></div>
-					</li>
-					<li>
-						<div class="album"></div>
-						<p class="track" data-url="timtebow">Tim Tebow</p>
-						<div class="status"></div>
-					</li>
-				</ul>
-			</nav>
-			<footer class="footer"></footer>
-		</div>
-
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
