Fixed stuff and scrolling

--- a/index.html
+++ b/index.html
@@ -78,18 +78,22 @@
 					<li class="left">
 						<img src="img/press.jpg" alt="">
 						<img src="img/harrymgk.jpg" alt="">
+						<img src="img/fisheye2.jpg" alt="">
+						<img src="img/stagoutparty.jpg" alt="">
 					</li>
 
 					<li class="center">
 						<img src="img/blowingherb.jpg" alt="">
+						<img src="img/swag.jpg" alt="">
 						<img src="img/plaid.jpg" alt="">
-						<img src="img/fisheye2.jpg" alt="">
+						<img src="img/jakemgk.jpg" alt="">
 					</li>
 
 					<li class="right">
 						<img src="img/stagoutjake.jpg" alt="">
 						<img src="img/harrymgk2.jpg" alt="">
 						<img src="img/fisheye.jpg" alt="">
+						<img src="img/jakemgk2.jpg" alt="">
 					</li>
 				</ul>	
 			</section>
