PLAYER WORKING, WITH LOTS AND LOTS OF GOATS

--- a/index.html
+++ b/index.html
@@ -37,33 +37,13 @@
 			<div class="player play"></div>
 			<div class="player next"></div>
 			<div class="player list" id="list"></div>
-			<ul class="tracklist">
-				<li>
-					<div class="album"></div>
-					<p class="track" data-url="stagdout">Stag&apos;d Out</p>
-					<div class="status"></div>
-				</li>
-				<li>
-					<div class="album"></div>
-					<p class="track" data-url="boneyard">Boneyard</p>
-					<div class="status"></div>
-				</li>
-				<li>
-					<div class="album"></div>
-					<p class="track" data-url="citylife">City Life</p>
-					<div class="status"></div>
-				</li>
-				<li>
-					<div class="album"></div>
-					<p class="track" data-url="gameofthrones">Game of Thrones</p>
-					<div class="status"></div>
-				</li>
-				<li>
-					<div class="album"></div>
-					<p class="track" data-url="timtebow">Tim Tebow</p>
-					<div class="status"></div>
-				</li>
-			</ul>
+			<div class="tracklist">
+				<p data-url="stagdout">Stag&apos;d Out</p>
+				<p data-url="boneyard">Boneyard</p>
+				<p data-url="citylife">City Life</p>
+				<p data-url="gameofthrones">Game of Thrones</p>
+				<p data-url="timtebow">Tim Tebow</p>
+			</div>
 		</nav>
 		<div class="stage">
 
