Fixed button states, added download link.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			<a href="/" class="logo">
 				<div class="icon"></div>
 			</a>
-			<a href="#about" class="link" data-link="about">about</a>
-			<a href="#events" class="link" data-link="events">events</a>
-			<a href="#gallery" class="link" data-link="gallery">gallery</a>
-			<a href="" class="link">download</a>
+			<a href="#about" class="link inactive" data-link="about">about</a>
+			<a href="#events" class="link inactive" data-link="events">events</a>
+			<a href="#gallery" class="link inactive" data-link="gallery">gallery</a>
+			<a href="https://www.facebook.com/pearlsnbones/app_6452028673" class="link" target="_blank">download</a>
 		</nav>
 		<nav class="controls">
 			<div class="now-playing">
