skrillex ft. goats… and some minor fixes

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
 			<div class="player play"></div>
 			<div class="player next"></div>
 			<div class="player list" id="list"></div>
+			<div class="nowplaying">
+			</div>
 			<div class="tracklist">
-				<p data-url="stagdout">Stag&apos;d Out</p>
-				<p data-url="boneyard">Boneyard</p>
-				<p data-url="citylife">City Life</p>
-				<p data-url="gameofthrones">Game of Thrones</p>
-				<p data-url="timtebow">Tim Tebow</p>
+				<p data-url="stagdout" data-songname="Stag&apos;d Out">Stag&apos;d Out</p>
+				<p data-url="boneyard" data-songname="Boneyard">Boneyard</p>
+				<p data-url="citylife" data-songname="City Life">City Life</p>
+				<p data-url="gameofthrones" data-songname="Game of Thrones">Game of Thrones</p>
+				<p data-url="timtebow" data-songname="Tim Tebow">Tim Tebow</p>
 			</div>
 		</nav>
 		<div class="stage">
