added now playing section, now with 20% more goats

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
 			<a href="https://www.facebook.com/pearlsnbones/app_6452028673" class="link" target="_blank">download</a>
 		</nav>
 		<nav class="controls">
-			<div class="now-playing">
-				
-			</div>
 			<div class="player previous"></div>
 			<div class="player play"></div>
 			<div class="player next"></div>
 			<div class="player list" id="list"></div>
-			<div class="nowplaying">
-			</div>
-			<div class="tracklist">
-				<p data-url="stagdout" data-songname="Stag&apos;d Out">Stag&apos;d Out</p>
-				<p data-url="boneyard" data-songname="Boneyard">Boneyard</p>
-				<p data-url="citylife" data-songname="City Life">City Life</p>
-				<p data-url="gameofthrones" data-songname="Game of Thrones">Game of Thrones</p>
-				<p data-url="timtebow" data-songname="Tim Tebow">Tim Tebow</p>
+			<div class="dropdown">
+				<div class="nowplaying">
+					<div class="albumart"></div>
+					<h2>Now Playing:</h2><br>
+					<h1>Name Here</h1>
+				</div>
+				<div class="tracklist">
+					<p data-url="stagdout" data-songname="Stag&apos;d Out">Stag&apos;d Out</p>
+					<p data-url="boneyard" data-songname="Boneyard">Boneyard</p>
+					<p data-url="citylife" data-songname="City Life">City Life</p>
+					<p data-url="gameofthrones" data-songname="Game of Thrones">Game of Thrones</p>
+					<p data-url="timtebow" data-songname="Tim Tebow">Tim Tebow</p>
+				</div>
 			</div>
 		</nav>
 		<div class="stage">
