WOOT WOOT players done, let me know if theres any weird functionality
 besides the next track playing after the first ones complete

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 					<h1>Name Here</h1>
 				</div>
 				<div class="tracklist">
-					<p data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover.jpg">Stag&apos;d Out</p>
-					<p data-url="boneyard" data-songname="Boneyard" data-albumart="epcover.jpg">Boneyard</p>
-					<p data-url="citylife" data-songname="City Life" data-albumart="epcover.jpg">City Life</p>
-					<p data-url="gameofthrones" data-songname="Game of Thrones" data-albumart="epcover.jpg">Game of Thrones</p>
-					<p data-url="timtebow" data-songname="Tim Tebow" data-albumart="epcover.jpg">Tim Tebow</p>
+					<p data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover">Stag&apos;d Out</p>
+					<p data-url="boneyard" data-songname="Boneyard" data-albumart="epcover">Boneyard</p>
+					<p data-url="citylife" data-songname="City Life" data-albumart="epcover">City Life</p>
+					<p data-url="gameofthrones" data-songname="Game of Thrones" data-albumart="epcover">Game of Thrones</p>
+					<p data-url="timtebow" data-songname="Tim Tebow" data-albumart="epcover">Tim Tebow</p>
 				</div>
 			</div>
 		</nav>
