--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 	</head>
 	<body>
-		<nav class="nav">
+		<nav class="nav navonpageload">
 			<a href="/" class="logo">
 				<div class="icon"></div>
 			</a>
 			<a href="#about" class="link inactive" data-link="about">about</a>
-			<a href="#events" class="link inactive" data-link="events">events</a>
+			<a href="https://www.facebook.com/pearlsnbones" class="link" data-link="events">events</a>
 			<a href="#gallery" class="link inactive" data-link="gallery">gallery</a>
 			<a href="https://www.facebook.com/pearlsnbones/app_6452028673" class="link" target="_blank">download</a>
 		</nav>
-		<nav class="controls">
+		<nav class="controls navonpageload">
 			<div class="player previous"></div>
 			<div class="player play"></div>
 			<div class="player next"></div>
@@ -37,47 +37,72 @@
 			<div class="dropdown">
 				<div class="nowplaying">
 					<div class="albumart"></div>
-					<h2>Now Playing:</h2>
 					<h1>Name Here</h1>
+					<h2>Pearls and Bones<h2>
 				</div>
 				<div class="tracklist">
-					<p data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover">Stag&apos;d Out</p>
-					<p data-url="boneyard" data-songname="Boneyard" data-albumart="epcover">Boneyard</p>
-					<p data-url="citylife" data-songname="City Life" data-albumart="epcover">City Life</p>
-					<p data-url="gameofthrones" data-songname="Game of Thrones" data-albumart="epcover">Game of Thrones</p>
-					<p data-url="timtebow" data-songname="Tim Tebow" data-albumart="epcover">Tim Tebow</p>
+					<p class="tracktext" data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover">Stag&apos;d Out</p>
+					<p class="tracktext" data-url="boneyard" data-songname="Boneyard" data-albumart="epcover">Boneyard</p>
+					<p class="tracktext" data-url="citylife" data-songname="City Life" data-albumart="epcover">City Life</p>
+					<p class="tracktext" data-url="gameofthrones" data-songname="Game of Thrones" data-albumart="epcover">Game of Thrones</p>
+					<p class="tracktext" data-url="timtebow" data-songname="Tim Tebow" data-albumart="epcover">Tim Tebow</p>
 				</div>
 			</div>
 		</nav>
+
 		<div class="stage">
+			<section id="home" class="section">
+			</section>
+			<section id="about" class="section">
+				<img src="img/wordmark.png" alt="Pearls and bones wordmark" class="wordmark">
+				<h3 class="lines"><span>Toronto Rap Duo</span></h3>
+				<p>Sandy Pearlman and Bones (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" alt="Revolution Recording Link">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
+				<!--<div class="harrybio">
+					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration">
+					<div class="harrybiotext">
+						<h1>Sandy Pearlman</h1>
+						<h2>Harry Joseph Warshaw</h2>
+						<br/>
+						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptas, velit, itaque, blanditiis laboriosam ratione neque repudiandae nisi omnis obcaecati totam tempore ex porro. Porro, expedita dolor voluptatum dolorum fuga.</span><span>Quae, tenetur, fugit quos maxime doloremque sequi alias aut aperiam minus accusamus omnis hic sint dolore at dicta illo animi. Pariatur, quis recusandae adipisci temporibus vitae natus quod excepturi similique.</span></p>
+					</div>
+				</div>
+				<div class="jakebio">
+					<img src="img/jake.png" class="jakeillustration" src="Jake Oliveira Illustration">
+					<div class="jakebiotext">
+						<h1>Bones<h1>
+						<h2>Jake Evelyn Oliveira</h2>
+						<br/>
+						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, deleniti, porro molestias cupiditate aliquam temporibus excepturi ratione sed pariatur illum a quisquam quas ducimus ut tempora dolorem minus? Non, iste?</span><span>Doloribus, mollitia, tempore, doloremque quo tenetur dignissimos hic facilis eum error iure animi deserunt harum nemo enim delectus officia laudantium quas ut quod corporis ipsum nisi quisquam non fugit laborum?</span></p>
+					</div>
+				</div>-->
 
-
-			<section id="home" class="section"></section>
-			<section id="about" class="section"></section>
-			<section id="events" class="section"></section>
+			</section>
 			<section id="gallery" class="section">
 				<!-- Gallery section -->
 
 				<ul class="columns">
 					<li class="left">
+						<img src="img/fuckyou.jpg" alt="">
+						<img src="img/harrystudio.jpg" alt="">
 						<img src="img/press.jpg" alt="">
 						<img src="img/harrymgk.jpg" alt="">
-						<img src="img/fisheye2.jpg" alt="">
 						<img src="img/stagoutparty.jpg" alt="">
 					</li>
 
 					<li class="center">
+						<img src="img/harrymixing.jpg" alt="">
+						<img src="img/jakeshoe.jpg" alt="">
 						<img src="img/blowingherb.jpg" alt="">
 						<img src="img/swag.jpg" alt="">
-						<img src="img/plaid.jpg" alt="">
-						<img src="img/jakemgk.jpg" alt="">
+						<img src="img/jakemgk2.jpg" alt="">
 					</li>
 
 					<li class="right">
+						<img src="img/studio.jpg" alt="">
+						<img src="img/jakestudio.jpg" alt="">
+						<img src="img/harrysitting.jpg" alt="">
 						<img src="img/stagoutjake.jpg" alt="">
-						<img src="img/harrymgk2.jpg" alt="">
-						<img src="img/fisheye.jpg" alt="">
-						<img src="img/jakemgk2.jpg" alt="">
+						<img src="img/angrystag.jpg" alt="">
 					</li>
 				</ul>	
 			</section>
