minor fixes to the bio page

--- a/index.html
+++ b/index.html
@@ -59,20 +59,22 @@
 					<h3 class="lines"><span>Toronto Hip-Hop Duo</span></h3>
 					<p class="openingtransition"><a href="#harry">Sandy Pearlman</a> and <a href="#jake">Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" alt="Revolution Recording Link">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
 				</div>
-				<div id="harry" class="harrybio">
+				<div class="harrybio">
 					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration">
-					<div class="harrybiotext">
+					<div class="harrybiotext" id="harry">
 						<h1>Sandy Pearlman</h1>
 						<h2>Harry Joseph Warshaw</h2>
-						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptas, velit, itaque, blanditiis laboriosam ratione neque repudiandae nisi omnis obcaecati totam tempore ex porro. Porro, expedita dolor voluptatum dolorum fuga.</span><span>Quae, tenetur, fugit quos maxime doloremque sequi alias aut aperiam minus accusamus omnis hic sint dolore at dicta illo animi. Pariatur, quis recusandae adipisci temporibus vitae natus quod excepturi similique.</span></p>
+						<br>
+						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptas, velit, itaque, blanditiis laboriosam ratione neque repudiandae nisi omnis obcaecati totam tempore ex porro. Porro, expedita dolor voluptatum dolorum fuga.</span></p>
 					</div>
 				</div>
-				<div id="jake" class="jakebio">
+				<div class="jakebio">
 					<img src="img/jake.png" class="jakeillustration" src="Jake Oliveira Illustration">
-					<div class="jakebiotext">
+					<div class="jakebiotext" id="jake">
 						<h1>Bones<h1>
 						<h2>Jake Evelyn Oliveira</h2>
-						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, deleniti, porro molestias cupiditate aliquam temporibus excepturi ratione sed pariatur illum a quisquam quas ducimus ut tempora dolorem minus? Non, iste?</span><span>Doloribus, mollitia, tempore, doloremque quo tenetur dignissimos hic facilis eum error iure animi deserunt harum nemo enim delectus officia laudantium quas ut quod corporis ipsum nisi quisquam non fugit laborum?</span></p>
+						<br>
+						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, deleniti, porro molestias cupiditate aliquam temporibus excepturi ratione sed pariatur illum a quisquam quas ducimus ut tempora dolorem minus? Non, iste?</span></p>
 					</div>
 				</div>
 			</section>
