rough version complete for front end, add mobile next

--- a/index.html
+++ b/index.html
@@ -24,40 +24,38 @@
 			<a href="/" class="logo">
 				<div class="icon"></div>
 			</a>
-			<a href="#about" class="link inactive" data-link="about">about</a>
-			<a href="https://www.facebook.com/pearlsnbones" class="link" data-link="events">events</a>
+			<a href="#about" class="link inactive activepage" data-link="about">about</a>
+			<a href="#events" class="link inactive" data-link="events">events</a>
 			<a href="#gallery" class="link inactive" data-link="gallery">gallery</a>
 			<a href="https://www.facebook.com/pearlsnbones/app_6452028673" class="link" target="_blank">download</a>
-		</nav>
-		<nav class="controls navonpageload">
-			<div class="player previous"></div>
-			<div class="player play"></div>
-			<div class="player next"></div>
-			<div class="player list" id="list"></div>
-			<div class="dropdown">
-				<div class="nowplaying">
-					<div class="albumart"></div>
-					<h1>Name Here</h1>
-					<h2>Pearls and Bones<h2>
-				</div>
-				<div class="tracklist">
-					<p class="tracktext" data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover">Stag&apos;d Out</p>
-					<p class="tracktext" data-url="boneyard" data-songname="Boneyard" data-albumart="epcover">Boneyard</p>
-					<p class="tracktext" data-url="citylife" data-songname="City Life" data-albumart="epcover">City Life</p>
-					<p class="tracktext" data-url="gameofthrones" data-songname="Game of Thrones" data-albumart="epcover">Game of Thrones</p>
-					<p class="tracktext" data-url="timtebow" data-songname="Tim Tebow" data-albumart="epcover">Tim Tebow</p>
+			<div class="controls">
+				<div class="player previous"></div>
+				<div class="player play"></div>
+				<div class="player next"></div>
+				<div class="player list" id="list"></div>
+				<div class="dropdown">
+					<div class="nowplaying">
+						<div class="albumart"></div>
+						<h1>Name Here</h1>
+						<h2>Pearls and Bones<h2>
+					</div>
+					<div class="tracklist">
+						<p class="tracktext" data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover">Stag&apos;d Out</p>
+						<p class="tracktext" data-url="boneyard" data-songname="Boneyard" data-albumart="epcover">Boneyard</p>
+						<p class="tracktext" data-url="citylife" data-songname="City Life" data-albumart="epcover">City Life</p>
+						<p class="tracktext" data-url="gameofthrones" data-songname="Game of Thrones" data-albumart="epcover">Game of Thrones</p>
+						<p class="tracktext" data-url="timtebow" data-songname="Tim Tebow" data-albumart="epcover">Tim Tebow</p>
+					</div>
 				</div>
 			</div>
 		</nav>
 
 		<div class="stage">
-			<section id="home" class="section">
-			</section>
 			<section id="about" class="section">
 				<div class="aboutlandingwrapper">
-					<img src="img/wordmark.png" alt="Pearls and bones wordmark" class="wordmark">
-					<h3 class="lines"><span>Toronto Hip-Hop Duo</span></h3>
-					<p class="openingtransition"><a href="#harry">Sandy Pearlman</a> and <a href="#jake">Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" alt="Revolution Recording Link">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
+					<img src="img/wordmark.png" alt="Pearls and bones wordmark" class="wordmark openingtransitiontitle">
+					<h3 class="lines openingtransitionsubtitle"><span>Toronto Hip-Hop Duo</span></h3>
+					<p class="openingtransitionparagraph"><a href="#harry">Sandy Pearlman</a> and <a href="#jake">Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" alt="Revolution Recording Link">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
 				</div>
 				<div class="harrybio">
 					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration">
@@ -65,7 +63,7 @@
 						<h1>Sandy Pearlman</h1>
 						<h2>Harry Joseph Warshaw</h2>
 						<br>
-						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptas, velit, itaque, blanditiis laboriosam ratione neque repudiandae nisi omnis obcaecati totam tempore ex porro. Porro, expedita dolor voluptatum dolorum fuga.</span></p>
+						<p><span>Yolo ipsum vero enim tenetur expedita vitae reiciendis like we sittin on the bench, nigga we don't really play. Molestiae recusandae minima nisi omnis ab. Ex odio corporis sit they say love is in the air, so I ut reiciendis.</span></p>
 					</div>
 				</div>
 				<div class="jakebio">
@@ -74,13 +72,24 @@
 						<h1>Bones<h1>
 						<h2>Jake Evelyn Oliveira</h2>
 						<br>
-						<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, deleniti, porro molestias cupiditate aliquam temporibus excepturi ratione sed pariatur illum a quisquam quas ducimus ut tempora dolorem minus? Non, iste?</span></p>
+						<p><span>Yolo ipsum vero enim tenetur expedita vitae reiciendis like we sittin on the bench, nigga we don't really play. Molestiae recusandae minima nisi omnis ab. Ex odio corporis sit they say love is in the air, so I ut reiciendis.</span></p>
 					</div>
 				</div>
 			</section>
+
+			<section id="events" class="section">
+				<h1 class="openingtransitiontitle">Events</h1><br>
+				<hr class="openingtransitionparagraph">
+				<p class="openingtransitionparagraph">
+					<span class="leftcolumn ">No Events</span>
+					<span class="rightcolumn inactivelink">Buy Tickets</span></p>
+				<br>
+				<hr class="openingtransitionparagraph">
+			</section>
+
 			<section id="gallery" class="section">
 				<ul class="columns">
-					<li class="left">
+					<li class="left openingtransitionparagraph">
 						<img src="img/fuckyou.jpg" alt="">
 						<img src="img/harrystudio.jpg" alt="">
 						<img src="img/press.jpg" alt="">
@@ -88,7 +97,7 @@
 						<img src="img/stagoutparty.jpg" alt="">
 					</li>
 
-					<li class="center">
+					<li class="center openingtransitionparagraph">
 						<img src="img/harrymixing.jpg" alt="">
 						<img src="img/jakeshoe.jpg" alt="">
 						<img src="img/blowingherb.jpg" alt="">
@@ -96,7 +105,7 @@
 						<img src="img/jakemgk2.jpg" alt="">
 					</li>
 
-					<li class="right">
+					<li class="right openingtransitionparagraph">
 						<img src="img/studio.jpg" alt="">
 						<img src="img/jakestudio.jpg" alt="">
 						<img src="img/harrysitting.jpg" alt="">
