--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<meta name="description" content="description">
 		<meta name="keywords" content="keywords">
 		<meta name="author" content="name">
-		<meta name="copyright" content="&copy; year name">
+		<meta name="copyright" content="&copy; 2013 John Jacob Designs and johnjacob.ca">
 
-		<link rel="icon" type="image/png" href="">
+		<link rel="icon" type="image/png" href="img/logo.png">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 
@@ -27,7 +27,8 @@
 			<a href="#about" class="link inactive activepage" data-link="about">about</a>
 			<a href="#events" class="link inactive" data-link="events">events</a>
 			<a href="#gallery" class="link inactive" data-link="gallery">gallery</a>
-			<a href="https://www.facebook.com/pearlsnbones/app_6452028673" class="link" target="_blank">download</a>
+			<a href="mailto:sandyandbones@gmail.com" class="externallink" target="_blank">contact</a>
+			<a href="https://www.facebook.com/pearlsnbones/app_6452028673" class="externallink hidelinkonmobile" target="_blank">download</a>
 			<div class="controls">
 				<div class="player previous"></div>
 				<div class="player play"></div>
@@ -37,7 +38,7 @@
 					<div class="nowplaying">
 						<div class="albumart"></div>
 						<h1>Name Here</h1>
-						<h2>Pearls and Bones<h2>
+						<h2>Pearls and Bones</h2>
 					</div>
 					<div class="tracklist">
 						<p class="tracktext" data-url="stagdout" data-songname="Stag&apos;d Out" data-albumart="epcover">Stag&apos;d Out</p>
@@ -50,16 +51,16 @@
 			</div>
 		</nav>
 
-		<div class="stage">
+		<!-- main pages -->
 			<section id="about" class="section">
 				<div class="aboutlandingwrapper">
 					<img src="img/wordmark.png" alt="Pearls and bones wordmark" class="wordmark openingtransitiontitle">
-					<h3 class="lines openingtransitionsubtitle"><span>Toronto Hip-Hop Duo</span></h3>
-					<p class="openingtransitionparagraph"><a href="#harry">Sandy Pearlman</a> and <a href="#jake">Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" alt="Revolution Recording Link">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
+					<h3 class="lines openingtransitionsubtitle"><span>TORONTO HIP-HOP DUO</span></h3>
+					<p class="openingtransitionparagraph"><a>Sandy Pearlman</a> and <a>Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" target="_blank">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
 				</div>
 				<div class="harrybio">
-					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration">
-					<div class="harrybiotext" id="harry">
+					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration" id="harry">
+					<div class="harrybiotext" id="harrymobile">
 						<h1>Sandy Pearlman</h1>
 						<h2>Harry Joseph Warshaw</h2>
 						<br>
@@ -67,22 +68,24 @@
 					</div>
 				</div>
 				<div class="jakebio">
-					<img src="img/jake.png" class="jakeillustration" src="Jake Oliveira Illustration">
-					<div class="jakebiotext" id="jake">
-						<h1>Bones<h1>
+					<img src="img/jake.png" class="jakeillustration" alt="Jake Oliveira Illustration" id="jake">
+					<div class="jakebiotext" id="jakemobile">
+						<h1>Bones</h1>
 						<h2>Jake Evelyn Oliveira</h2>
 						<br>
 						<p><span>Yolo ipsum vero enim tenetur expedita vitae reiciendis like we sittin on the bench, nigga we don't really play. Molestiae recusandae minima nisi omnis ab. Ex odio corporis sit they say love is in the air, so I ut reiciendis.</span></p>
 					</div>
 				</div>
+				<div class="aboutfooter">Designed by John Jacob Designs &mdash; <a href="http://johnjacob.ca/">Johnjacob.ca</a></div>
 			</section>
 
 			<section id="events" class="section">
 				<h1 class="openingtransitiontitle">Events</h1><br>
 				<hr class="openingtransitionparagraph">
 				<p class="openingtransitionparagraph">
+					<!--format: MONTH DD TTpm &mdash; Venue-->
 					<span class="leftcolumn ">No Events</span>
-					<span class="rightcolumn inactivelink">Buy Tickets</span></p>
+					<span class="rightcolumn inactivelink">Contact Us for Tickets</span></p>
 				<br>
 				<hr class="openingtransitionparagraph">
 			</section>
@@ -90,32 +93,35 @@
 			<section id="gallery" class="section">
 				<ul class="columns">
 					<li class="left openingtransitionparagraph">
-						<img src="img/fuckyou.jpg" alt="">
-						<img src="img/harrystudio.jpg" alt="">
-						<img src="img/press.jpg" alt="">
-						<img src="img/harrymgk.jpg" alt="">
-						<img src="img/stagoutparty.jpg" alt="">
+						<img src="img/fuckyou.jpg" alt="" data-imagename="cats">
+						<img src="img/harrystudio.jpg" alt="" data-imagename="cats">
+						<img src="img/press.jpg" alt="" data-imagename="cats">
+						<img src="img/harrymgk.jpg" alt="" data-imagename="cats">
+						<img src="img/stagoutparty.jpg" alt="" data-imagename="cats">
 					</li>
 
 					<li class="center openingtransitionparagraph">
-						<img src="img/harrymixing.jpg" alt="">
-						<img src="img/jakeshoe.jpg" alt="">
-						<img src="img/blowingherb.jpg" alt="">
-						<img src="img/swag.jpg" alt="">
-						<img src="img/jakemgk2.jpg" alt="">
+						<img src="img/harrymixing.jpg" alt="" data-imagename="cats">
+						<img src="img/jakeshoe.jpg" alt="" data-imagename="cats">
+						<img src="img/blowingherb.jpg" alt="" data-imagename="cats">
+						<img src="img/swag.jpg" alt="" data-imagename="cats">
+						<img src="img/jakemgk2.jpg" alt="" data-imagename="cats">
 					</li>
 
 					<li class="right openingtransitionparagraph">
-						<img src="img/studio.jpg" alt="">
-						<img src="img/jakestudio.jpg" alt="">
-						<img src="img/harrysitting.jpg" alt="">
-						<img src="img/stagoutjake.jpg" alt="">
-						<img src="img/angrystag.jpg" alt="">
+						<img src="img/studio.jpg" alt="" data-imagename="cats">
+						<img src="img/jakestudio.jpg" alt="" data-imagename="cats">
+						<img src="img/harrysitting.jpg" alt="" data-imagename="cats">
+						<img src="img/stagoutjake.jpg" alt="" data-imagename="cats">
+						<img src="img/angrystag.jpg" alt="" data-imagename="cats">
 					</li>
 				</ul>	
 			</section>
-		</div>
+
+
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script src="js/scripts.js"></script>
+		<script type='text/javascript' src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
+		<script type='text/javascript' src="js/waypoints.min.js"></script>
+		<script type='text/javascript' src="js/scripts.js"></script>
 	</body>
 </html>
