added past events, hover event for gallery, and fixed nav on load transition issue

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 		<meta name="description" content="description">
 		<meta name="keywords" content="keywords">
-		<meta name="author" content="name">
+		<meta name="author" content="John Jacob Designs">
 		<meta name="copyright" content="&copy; 2013 John Jacob Designs and johnjacob.ca">
 
-		<link rel="icon" type="image/png" href="img/logo.png">
+		<link rel="icon" type="image/png" href="img/favicon.png">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 
@@ -56,7 +56,7 @@
 				<div class="aboutlandingwrapper">
 					<img src="img/wordmark.png" alt="Pearls and bones wordmark" class="wordmark openingtransitiontitle">
 					<h3 class="lines openingtransitionsubtitle"><span>TORONTO HIP-HOP DUO</span></h3>
-					<p class="openingtransitionparagraph"><a>Sandy Pearlman</a> and <a>Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" target="_blank">Revolution Recording</a> in preparation for their debut full length album. Stage shattering shows with the likes of Machine Gun Kelly and Tyga have proved that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
+					<p class="openingtransitionparagraph"><a>Sandy Pearlman</a> and <a>Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" target="_blank">Revolution Recording</a> in preparation for their debut full length album "2D". Stage shattering shows with the likes of Machine Gun Kelly have proven that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
 				</div>
 				<div class="harrybio">
 					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration" id="harry">
@@ -80,40 +80,105 @@
 			</section>
 
 			<section id="events" class="section">
-				<h1 class="openingtransitiontitle">Events</h1><br>
+
+				<h1 class="openingtransitiontitle">Upcoming Events</h1><br>
 				<hr class="openingtransitionparagraph">
-				<p class="openingtransitionparagraph">
-					<!--format: MONTH DD TTpm &mdash; Venue-->
-					<span class="leftcolumn ">No Events</span>
-					<span class="rightcolumn inactivelink">Contact Us for Tickets</span></p>
-				<br>
+				<ul class="openingtransitionparagraph">
+				<!--format: MM/DD TTpm &mdash; Venue-->
+					<li>
+						<p>
+						<span class="leftcolumn">07/14 11PM &mdash; Detour Bar, 193 Balwin St.</span>
+						<span class="rightcolumn inactivelink">Buy Tickets</span>
+						<br>
+						</p>
+					</li>
+				</ul>
+				<hr class="openingtransitionparagraph">
+
+				<h1 class="openingtransitiontitle">Past Events</h1><br>
+				<hr class="openingtransitionparagraph">
+				<ul class="openingtransitionparagraph">
+				<!--format: MM/DD/YYYY &mdash; Venue/name-->
+					<li>
+						<p>
+						<span class="leftcolumn">12/15/2012 &mdash; Opening for MGK in Hamilton</span>
+						<br>
+						</p>
+					</li>
+				</ul>
 				<hr class="openingtransitionparagraph">
 			</section>
 
 			<section id="gallery" class="section">
 				<ul class="columns">
 					<li class="left openingtransitionparagraph">
-						<img src="img/fuckyou.jpg" alt="" data-imagename="cats">
-						<img src="img/harrystudio.jpg" alt="" data-imagename="cats">
-						<img src="img/press.jpg" alt="" data-imagename="cats">
-						<img src="img/harrymgk.jpg" alt="" data-imagename="cats">
-						<img src="img/stagoutparty.jpg" alt="" data-imagename="cats">
+						<div class="imagecontainer">
+							<img src="img/fuckyou.jpg" alt="">
+							<p>Fuck you</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/harrystudio.jpg" alt="">
+							<p>Harry in the studio</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/press.jpg" alt="">
+							<p>Our Editorial Debut</p>
+						</div>
+
+						<div class="imagecontainer">
+							<img src="img/harrymgk.jpg" alt="">
+							<p>Harry opening for MGK</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/stagoutparty.jpg" alt="">
+							<p>Stag'd Out paint party</p>
+						</div>
 					</li>
 
 					<li class="center openingtransitionparagraph">
-						<img src="img/harrymixing.jpg" alt="" data-imagename="cats">
-						<img src="img/jakeshoe.jpg" alt="" data-imagename="cats">
-						<img src="img/blowingherb.jpg" alt="" data-imagename="cats">
-						<img src="img/swag.jpg" alt="" data-imagename="cats">
-						<img src="img/jakemgk2.jpg" alt="" data-imagename="cats">
+						<div class="imagecontainer">
+							<img src="img/harrymixing.jpg" alt="">
+							<p>Sandy Pearlman mixing</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/jakeshoe.jpg" alt="">
+							<p>Kicking ass, and having class</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/blowingherb.jpg" alt="">
+							<p>Blowing the herb</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/jakemgk2.jpg" alt="">
+							<p>Bones opening for MGK</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/swag.jpg" alt="">
+							<p>Swagger</p>
+						</div>
 					</li>
 
 					<li class="right openingtransitionparagraph">
-						<img src="img/studio.jpg" alt="" data-imagename="cats">
-						<img src="img/jakestudio.jpg" alt="" data-imagename="cats">
-						<img src="img/harrysitting.jpg" alt="" data-imagename="cats">
-						<img src="img/stagoutjake.jpg" alt="" data-imagename="cats">
-						<img src="img/angrystag.jpg" alt="" data-imagename="cats">
+						<div class="imagecontainer">
+							<img src="img/studio.jpg" alt="">
+							<p>Studio session</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/jakestudio.jpg" alt="">
+							<p>Stag in the headlights</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/harrysitting.jpg" alt="">
+							<p>Harry pressing play</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/stagoutjake.jpg" alt="">
+							<p>Get your game face on</p>
+						</div>
+						<div class="imagecontainer">
+							<img src="img/angrystag.jpg" alt="">
+							<p>Our signature drink</p>
+						</div>
 					</li>
 				</ul>	
 			</section>
